Fix ContentWidget z-index style to css classes and WYSIYHTMLToolbar left position. #184 - Add z0 class into override file.

--- a/app/styles/basscss_and_override.scss
+++ b/app/styles/basscss_and_override.scss
@@ -140,6 +140,7 @@ h1, h2, h3, h4, h5, h6 {
 .content-box { box-sizing: content-box; }
 
 // Z-Index
+.z0 { z-index: 0 }
 .z5 { z-index: 5 }
 .z6 { z-index: 6 }
 .z7 { z-index: 7 }
